tests/macro-tests/tests/expand/fail/non_existent_derive_macro.rs
#[derive(NonExistentMacro)]
struct Dummy;

pub fn main() {}
